fix(Scrollbar): show scrollbar styles

--- a/src/style/scrollBar.less
+++ b/src/style/scrollBar.less
@@ -1,7 +1,7 @@
 .scrollbar(@x: hidden, @y: overlay) {
   overflow: hidden;
   scrollbar-width: thin;
-  scrollbar-color: rgb(173 178 194 / 60%) rgb(255 255 255 / 0%);
+  scrollbar-color: rgba(173, 178, 194, 0.6) rgba(255, 255, 255, 0);
 
   &:hover {
     overflow-x: scroll;
@@ -14,7 +14,7 @@
     width: 4px;
     height: 4px;
     background: transparent;
-    appearance: none;
+    -webkit-appearance: none;
   }
 
   &::-webkit-scrollbar-track,
@@ -25,11 +25,11 @@
   }
 
   &::-webkit-scrollbar-thumb {
-    background: rgb(173 178 194 / 60%);
+    background: rgba(173, 178, 194, 0.6);
     border-radius: 10px;
   }
 
   &::-webkit-scrollbar-thumb:hover {
-    background: rgb(123 129 156 / 60%);
+    background: rgba(123, 129, 156, 0.6);
   }
 }
